# thinta

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: thinta.h
include/integers/: fixed.h
src/: thinta.c
src/integers/: conversion.c  ops.c
src/internal/: small_floats.h  small_ints.h  thinta_internal.h
